# yolo_api

./: .Dockerignore  .gitignore  Dockerfile  clip_test.py  main.py  pyproject.toml  requirements.txt  test_qdrant_search.py  yolo_test.py
.github/workflows/: deploy.yml
clip/: clip_fun.py
yolo/: yolo_fun.py
